# Procfiler

./: .gitignore  Readme.md
docs/: CLREvents.md  EventsProcessing.md  ShadowStackBinaryFormat.md  ShadowStackFormat.md
src/: Procfiler.sln
src/Procfiler/: GlobalUsings.cs  Procfiler.csproj  Readme.md
src/Procfiler/src/Core/: OrderedEventsEnumerator.cs  Statistics.cs  TraceEventsExtensions.cs
src/Procfiler/src/Utils/: PathUtils.cs  ProcfilerLogger.cs  StringAndCharSpanExtensions.cs  StringBuilderExtensions.cs  TempFileCookie.cs  TempFolderCookie.cs
src/ProcfilerEventSources/: MethodStartEndEventSource.cs
src/ProcfilerTests/Core/: GoldProcessBasedTest.cs  KnownSolution.cs  ProcessTestBase.cs  SingleMutatorTestBase.cs  TestLogger.cs  TestPaths.cs  TestWithContainerBase.cs
src/ProcfilerTests/Tests/: MethodsStartEndTests.cs
src/ProcfilerTests/Tests/DepsJson/: ReadWriteDepsJsonTests.cs
src/ProcfilerTests/Tests/EventMetadataTests/: EventMetadataTestWithRealEventsTest.cs  EventsMetadataTest.cs
src/ProcfilerTests/Tests/EventsCollection/: EventsCollectionTests.cs
src/ProcfilerTests/Tests/Mutators/: AwaitContinuationScheduledMutatorTest.cs
src/Scripts/: Scripts.fsproj
src/Scripts/Core/: SerializeUndefinedThreadEvents.fs
src/Scripts/Scripts/: SerializeUndefinedEvents.fsx  TmpToGold.fsx
src/cpp/: CMakeLists.txt  ClassFactory.cpp  ClassFactory.h  dllmain.cpp  dllmain.h  procfiler.def
src/cpp/corprofiler/: ProcfilerCorProfilerCallback.cpp  ProcfilerCorProfilerCallback.h
src/cpp/corprofiler/info/: AssemblyInfo.cpp  AssemblyInfo.h  FunctionInfo.cpp  FunctionInfo.h  GenericMethodSignature.cpp  GenericMethodSignature.h  InterceptionVarInfo.h  MethodSignature.cpp  MethodSignature.h  ModuleInfo.cpp  ModuleInfo.h  TypeInfo.cpp  TypeInfo.h  parser.cpp  parser.h
src/cpp/corprofiler/shadowstack/: EventsWithThreadId.cpp  EventsWithThreadId.h  ShadowStack.cpp  ShadowStack.h  utils.cpp  utils.h
src/cpp/corprofiler/shadowstack/serializers/: BinaryShadowStackSerializer.cpp  BinaryShadowStackSerializer.h  DebugShadowStackSerializer.cpp  DebugShadowStackSerializer.h  EventPipeShadowStackSerializer.cpp  EventPipeShadowStackSerializer.h  ShadowStackSerializer.h
src/cpp/logging/: ProcfilerLogger.cpp  ProcfilerLogger.h
src/cpp/miniutf/: miniutfdata.h
src/cpp/util/: ComPtr.h  const.h  env_constants.cpp  env_constants.h  helpers.cpp  helpers.h  performance_counter.h  types.h  util.cpp  util.h
src/dotnet/: .editorconfig  Procfiler.sln  Procfiler.sln.DotSettings
src/dotnet/IntegrationTests/: CollectToXesTests.fs  IntegrationTests.fsproj  SplitByMethodsTests.fs  SplitByNamesTests.fs  SplitByThreadsTests.fs  UndefinedEvents.fs  Util.fs
src/dotnet/Launchers/: Launchers.fsproj
src/dotnet/Launchers/Core/: CollectToXes.fs  SerializeUndefinedThreadEvents.fs  SplitByMethods.fs  SplitByNames.fs  SplitByThreads.fs  Utils.fs
src/dotnet/Launchers/Scripts/: CollectToXes.fsx  LaunchSplitByMethods.fsx  SerializeUndefinedEvents.fsx  TmpToGold.fsx
src/dotnet/Procfiler/: Procfiler.csproj  Readme.md
src/dotnet/Procfiler/src/: Program.cs
src/dotnet/ProcfilerBuildTasks/: BuildCppProcfiler.cs  ProcfilerBuildTasks.csproj
src/dotnet/ProcfilerEventSources/: MethodStartEndEventSource.cs
src/dotnet/ProcfilerTests/: ProcfilerTests.csproj
src/dotnet/ProcfilerTests/Core/: CppBinStacksTestBase.cs  GoldProcessBasedTest.cs  KnownSolution.cs  KnownSolutionExtensions.cs  MethodSequencePatternChecker.cs  ProcessTestBase.cs  ProgramMethodCallTreeDumper.cs  SingleMutatorTestBase.cs  TestLogger.cs  TestPaths.cs  TestUtil.cs  TestWithContainerBase.cs
src/dotnet/ProcfilerTests/Tests/: EventTimeStampsConsistencyTest.cs  MethodStartEndConsistencyTest.cs  MethodsStartEndTests.cs  SimpleTests.cs
src/dotnet/Scripts/Core/: Utils.fs
src/dotnet/TestsUtil/: KnownSolution.cs  TestPaths.cs  TestsUtil.csproj
test_data/DepsJsons/: ConsoleApp1.deps.json
test_data/IgnoredSource/ArgumentOutOfRangeException/: Program.cs
test_data/IgnoredSource/COMException/: Program.cs
test_data/IgnoredSource/DivideByZeroException/: Program.cs
test_data/IgnoredSource/EnvironmentFailFast/: Program.cs
test_data/IgnoredSource/FormatException/: Program.cs
test_data/IgnoredSource/HttpRequests/: Program.cs
test_data/IgnoredSource/IndexOutOfRangeException/: Program.cs
test_data/IgnoredSource/NullReferenceException/: Program.cs
test_data/IgnoredSource/ServerConcurrentGC/: Program.cs  ServerConcurrentGC.csproj
test_data/IgnoredSource/Sockets/: Program.cs
test_data/IgnoredSource/WorkstationConcurrentGC/: Program.cs  WorkstationConcurrentGC.csproj
test_data/gold/linux/ByMethodSplitTests/: DynamicAssemblyLoading.gold  ExceptionTryCatchFinally.gold  ExceptionTryCatchFinallyWhen.gold  FinalizableObject.gold  IntensiveThreadPoolUse.gold  LOHAllocations.gold  NotExistingAssemblyLoading.gold  UnsafeFixed.gold
test_data/gold/linux/MethodsStartEndTests/: DynamicAssemblyCreation.gold  DynamicAssemblyLoading.gold  ExceptionTryCatchFinally.gold  FileWriteProject.gold  FinalizableObject.gold  LOHAllocations.gold  (+1 more)
test_data/source/ConsoleApp1/: Program.cs
test_data/source/DynamicAssemblyCreation/: Program.cs
test_data/source/DynamicAssemblyLoading/: DynamicAssemblyLoading.csproj  Program.cs
test_data/source/ExceptionTryCatchFinally/: Program.cs
test_data/source/ExceptionTryCatchFinallyAsync/: Program.cs
test_data/source/ExceptionTryCatchFinallyWhen/: Program.cs
test_data/source/FileAsyncOperations/: Program.cs
test_data/source/FileWriteProject/: Program.cs
test_data/source/FinalizableObject/: Program.cs
test_data/source/IntensiveThreadPoolUse/: Program.cs
test_data/source/LOHAllocations/: LOHAllocations.csproj  Program.cs
test_data/source/NotExistingAssemblyLoading/: Program.cs
test_data/source/NotSimpleAsyncAwait/: Program.cs
test_data/source/SimpleAsyncAwait/: Program.cs
test_data/source/SystemArrayPooling/: Program.cs  SystemArrayPooling.csproj
test_data/source/TaskTestProject1/: Program.cs
test_data/source/UnsafeFixed/: Program.cs
test_data/source/YieldEnumerator/: Program.cs
(+353 files in other folders)
